--- a/browser/js/authorized/profile/student.html
+++ b/browser/js/authorized/profile/student.html
@@ -4,6 +4,7 @@
             <div class="col-md-12">
                 <div class="teach-profile">
                     <div class="teacherpro"><img ng-src="{{user.profilePic}}" alt="teacher detail" /></div>
+                    <h1 class="sec-title b">{{user.firstName}} {{user.lastName}}</h1>
                     <div class="pro-degree"><span ng-if="user.location">Located in {{user.location}}</span></div>
                 </div>
             </div>
