--- a/browser/js/common/modals/signup/signup.html
+++ b/browser/js/common/modals/signup/signup.html
@@ -22,7 +22,7 @@
                     <label for="teacher"><img src="img/tie-pop.png" alt="tie-pop" /> Teacher Account</label>
                 </div>
             </div>
-            <p>Already have an account? <a ng-click="close(true)">Login to your account here!</a></p>
+            <p style="padding:15px;">Already have an account? <a ng-click="close(true)">Login to your account here!</a></p>
     </div>
     <div class="modal-footer">
         <input type="submit" name="submit" class="btn" value="SINUP NOW" style="width: 100%" />
