--- a/browser/js/authorized/profile/settings/settings.html
+++ b/browser/js/authorized/profile/settings/settings.html
@@ -52,9 +52,9 @@
                 </div>
             </div>
             <div class="form-group" ng-show="teacher">
-                <label class="col-sm-2 control-label">Experience</label>
+                <label class="col-sm-2 control-label">Years of Experience</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" ng-model="user.teacherOptions.experience" placeholder="Years of experience">
+                    <input type="text" class="form-control" ng-model="user.teacherOptions.experience" numbers-only placeholder="Years of experience">
                 </div>
             </div>
             <div class="form-group" ng-show="teacher">
